--- a/basics-01-understanding-the-course-project-starting-code/index.html
+++ b/basics-01-understanding-the-course-project-starting-code/index.html
@@ -7,8 +7,10 @@
     <link rel="shortcut icon" href="favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@400;700&family=Nunito:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="main.css" />
@@ -21,6 +23,7 @@
       </section>
       <section id="plans">
         <h1 class="section-title">Choose Your Plan</h1>
+        <p>Make sure you get the most for your money!</p>
       </section>
     </main>
   </body>
